src/test/deca/syntax/invalid/homemade/parser/test/test_pars_inv_class_oubli_type_field.deca
// Description:
//    tests de programme incorrect syntaxiquement pour les class
//
// Resultats:
//    Ligne 12 : Erreur (expected type)
//    
//
// Historique:
//    cree le 04/01/2023

class iden3{
    protected iden = 98452;
}